# povozka-gen

./: CHANGELOG.md  cabal.project  povozka-gen.cabal
app/: Main.hs
